# 2048

./: .gitignore  CMakeLists.txt  Makefile  README.md  index.html
cpp/: 2048.cpp  2048.hpp  main.cpp  wasm.cpp
js/: game_manager.js  grid.js  html_actuator.js  keyboard_input_manager.js  solver.js  worker.js
style/: solver.css
style/fonts/: clear-sans.css
